// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should match snapshot (default) 1`] = `
<div
  className="c-sidebar"
>
  <h4
    className="u-align-left"
  >
    Hi, Anonymous!
  </h4>
  <hr />
  <AuthButtons
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "body": Object {
            "add": "",
            "options": Array [],
            "title": "",
          },
          "menu": Object {
            "delete": false,
            "secret": false,
          },
        },
        "list": Object {
          "data": Array [],
          "menu": Object {
            "search": "",
          },
        },
        "loading": 0,
        "log": Array [],
        "user": Object {},
        "view": Object {
          "body": Object {
            "add": "",
          },
          "data": Array [],
          "menu": Object {
            "delete": false,
            "settings": false,
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "redirect": "/voting-app",
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
</div>
`;

exports[`Sidebar should match snapshot (name) 1`] = `
<div
  className="c-sidebar"
>
  <h4
    className="u-align-left"
  >
    Hi, User A!
  </h4>
  <hr />
  <AuthButtons
    actions={
      Object {
        "formAddOption": [MockFunction],
        "formCheckTitle": [MockFunction],
        "formClearState": [MockFunction],
        "formRemoveOption": [MockFunction],
        "formSetAdd": [MockFunction],
        "formSetTitle": [MockFunction],
        "formToggleDelete": [MockFunction],
        "formToggleSecret": [MockFunction],
        "listClearState": [MockFunction],
        "listSetSearch": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaCreatePoll": [MockFunction],
        "metaDeletePoll": [MockFunction],
        "metaGetPollItem": [MockFunction],
        "metaGetPollList": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "pollAddOption": [MockFunction],
        "pollCastVote": [MockFunction],
        "pollRemoveOption": [MockFunction],
        "pollRemoveVote": [MockFunction],
        "pollToggleFlag": [MockFunction],
        "pollToggleHide": [MockFunction],
        "pollToggleSecret": [MockFunction],
        "viewClearState": [MockFunction],
        "viewSetAdd": [MockFunction],
        "viewToggleDelete": [MockFunction],
        "viewToggleSettings": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "delete": false,
        },
        "errors": Array [],
        "form": Object {
          "body": Object {
            "add": "",
            "options": Array [],
            "title": "",
          },
          "menu": Object {
            "delete": false,
            "secret": false,
          },
        },
        "list": Object {
          "data": Array [],
          "menu": Object {
            "search": "",
          },
        },
        "loading": 0,
        "log": Array [],
        "user": Object {
          "auth": Object {
            "id": "",
            "provider": "",
          },
          "data": Object {
            "restricted": false,
          },
          "id": "",
          "name": "User A",
          "type": "auth",
        },
        "view": Object {
          "body": Object {
            "add": "",
          },
          "data": Array [],
          "menu": Object {
            "delete": false,
            "settings": false,
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "redirect": "/voting-app",
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
</div>
`;
